[package]
name = "punpun"
version = "0.1.0"
authors = ["sommoyogurt <rtrombetta@gmail.com>"]


[dependencies]
http-muncher = "0.2.0"
rustc-serialize = "0.3.15"
sha1 = "0.1.1"
log = "0.3"
env_logger = "0.3"
mio = "0.4"
bitflags = "*"
byteorder = "*"
rand = "*"
openssl = "*"
#slab = "*"
rmp = "*"
fern = "*"
time = "*"
