[package]
name = "punpun"
version = "0.1.0"
authors = ["sommoyogurt <rtrombetta@gmail.com>"]


[dependencies]
rustc-serialize = "0.3.15"
log = "0.3"
env_logger = "0.3"
mio = "0.4.3"
bitflags = "*"
byteorder = "*"
rand = "*"
openssl = "*"
fern = "*"
time = "*"
bytes = "0.2.11"

[dependencies.redis]
version = "*"
features = ["unix_socket"]
